test/bad/functions/args2.px

func f(String s) def
    s = 5
    return

func main() Int def
    return 0
